indicadores y ventajas de BSC by jhordy vizcarra ll.

--- a/BSC-BMC/index.tex
+++ b/BSC-BMC/index.tex
@@ -44,10 +44,43 @@
 	
 	%% main text
 
-\section{Objetivos}
+
+
+\section{Balanced ScoreCard }
+
+concepto de bsc razer y como funciona + imagenes para decorar\\
+
+Areas críticas de Balanced Scorecard:
 		\begin{itemize}
-		\item Objetivo 1: 
+		\item Indicadores desde la perspectiva de los procesos internos: Desde esta perspectiva son analizados aquellos procesos de la empresa que están dirigidos a obtener el rendimiento esperado en los tiempos programados. Así, este grupo de indicadores incluye aquellos que están relacionados con la calidad del proceso, como son los indicadores de productividad, de calidad del producto, de costos del producto, de eficiencia del proceso de fabricación.
+
+Igualmente, serán considerados en este grupo los indicadores de tiempos de entrega, de calidad de materias primas, de mantenimiento de productos, así como los indicadores medioambientales.
+		\item Indicadores desde la perspectiva del cliente: En este grupo se encuentran los indicadores relacionados con las soluciones destinadas a satisfacer las necesidades de los clientes. También se consideran aquellos vinculados a mejorar la cuota de mercado de la empresa.
+
+Entre dichos indicadores se encuentran la fidelidad del cliente, la satisfacción del cliente, la calidad  que se percibe de nuestro producto o servicio, la imagen que los clientes tienen de la empresa, la calidad del servicio postventa y del servicio de atención al cliente.
+
+		\item Indicadores desde la perspectiva financiera: Aquí se consideran los indicadores analizados desde la contabilidad y las finanzas, especialmente aquellos que dan cuenta de la situación económica de la empresa. Entre dichos indicadores podemos considerar las ampliaciones de capital, las fusiones o absorciones, la emisión de acciones, bonos u otros instrumentos financieros y la creación de filiales.
+
+También integran este grupo de indicadores la gestión del riesgo, la liquidez de la empresa, el endeudamiento, etc.
+
+		\item Indicadores desde la perspectiva de la innovación y aprendizaje: En este cuarto grupo de indicadores se considera aquellos relacionados con la introducción de innovación en los diversos procesos de la organización, la capacitación de los trabajadores, ventas por lanzamiento de nuevos productos o servicios, ahorros de costos por innovación en procesos, ROI por la inversión en innovación, ratio de éxito de nuevos productos, incremento de capacidades en el personal, etc.
+
+La implementación y análisis de estos indicadores en la forma de cuadro de mando integral permitirá realizar el control de diversos aspectos estratégicos de la organización, lo cual llevará a tomar decisiones relacionadas con acciones preventivas y correctivas, así como de mejoramiento del rendimiento mediante la implementación de las cuatro perspectivas señaladas.
 	\end{itemize}
+
+
+Ventajas de Balanced Scorecard:
+\begin{itemize}
+		\item Permite tener una visión y control de cómo el funcionamiento de cada área y miembro de la empresa influye en el resto de la organización.
+		\item Establecer una vinculación entre los objetivos de la empresa y las acciones necesarias para lograrlos.
+		\item Una vez ejecutadas las acciones de mejora, detectar cómo influyen en otras áreas de la empresa, lo que permitirá ejecutar correcciones adicionales si es necesario.
+		\item Implantar un modelo de gestión flexible e interactivo, acorde a los actuales requerimientos y exigencias del mercado.
+		\item Incorporación de perspectivas distintas a las financieras, como la perspectiva del cliente o la interna o de procesos de negocio.
+		\item Disponer de una una imagen muy clara y gráfica del status de la organización en cada momento en cuanto a metas, resultados y acciones en desarrollo o ya implantadas.
+		\item Ayuda a tomar las decisiones más acertadas en el momento oportuno para maximizar la rentabilidad y productividad de la empresa.
+		\item Facilita la comunicación entre dirección, mandos intermedios y empleados para que todos tenga una idea muy clara de los objetivos, específicos y generales, de la empresa y de las acciones necesarias para lograrlos.
+	\end{itemize}
+
 
 	%%
 	
@@ -63,24 +96,13 @@
 	aqui el marco teorico 
 		
 \subsection{subtitulo2}
-	
-	
+		
 	
 
 	%%
 	%\linenumbers
 	
 	%% main text
-
-\section{Ejemplo}
-	
-
-aqui el ejemplo
-
-
-
-
-
 
 
 %%
