BSC terminado by Ronald Ordoñez
Abstract, BSC definicion, ejemplo completado.

--- a/BSC-BMC/index.tex
+++ b/BSC-BMC/index.tex
@@ -27,7 +27,8 @@
 		
 		\begin{abstract}
 			%% Text of abstract
-			texto
+			Performance Management bevat activiteiten die ervoor kunnen zorgen dat doelen consistent worden behaald op een effectieve en efficiënte wijze. Middels het Business Model Canvas wordt u een concept aangeboden, waarmee u het business model van uw organisatie kunt beschrijven, overdenken en onderzoeken. Een business model kan het beste worden beschreven aan de hand van negen basisbouwstenen, die de logica laten zien van hoe een bedrijf geld wil gaan verdienen.
+Na een strategische heroriëntatie in een snel veranderende omgeving, gaan wij verder in op de best practice in performance management, de Business Balanced Scorecard (‘BSC’). De nadruk ligt op de praktische implementatie van de BSC en het bouwen van een gebalanceerde dashboard, waarbij niet alleen rekening wordt gehouden met een financial dashboard, maar ook met het klantperspectief, intern en innovatief perspectief.
 	
 		\end{abstract}
 \end{frontmatter}
@@ -48,7 +49,37 @@
 
 \section{Balanced ScoreCard }
 
-concepto de bsc razer y como funciona + imagenes para decorar\\
+\title{Balanced Scorecard}
+El Balanced Scorecard (BSC / Cuadro de Mando Integral) es una herramienta que permite enlazar estrategias y objetivos clave con desempeño y resultados a través de cuatro áreas críticas en cualquier empresa: desempeño financiero, conocimiento del cliente, procesos internos de negocio y aprendizaje y crecimiento. \\
+Sin embargo, es algo más que un nuevo sistema de medición. Las empresas innovadoras utilizan el Cuadro de Mando integral como el marco y estructura central y organizativa para sus procesos. Las empresas pueden desarrollar un Cuadro de mando Integral, con unos objetivos bastante limitados: conseguir clarificar, obtener el consenso y centrarse en su estrategia, y luego comunicar esa estrategia a toda la organización. Sin embargo, el verdadero poder del Cuadro de mando Integral aparece cuando se transforma de un sistema de indicadores en un sistema de gestión. A medida que más y más empresas trabajan con el 
+Cuadro de Mando Integral, se dan cuenta de que puede utilizarse para:
+		\begin{itemize}
+		\item Clarificar la estrategia y conseguir el consenso sobre ella.
+		\item Comunicar la estrategia a toda la organización.
+		\item Alinear los objetivos personales y departamentales con la estrategia.
+		\item Vincular los objetivos estratégicos con los objetivos a largo plazo y los presupuestos anuales.
+		\item Identificar y alinear las iniciativas estratégicas.
+		\item Realizar revisiones estratégicas periódicas y sistemáticas
+		\item Obtener feedback para aprender sobre la estrategia y mejorarla.
+		\end{itemize}
+
+\begin{center}
+	\includegraphics[width=12cm]{./Imagenes/img1} 
+\end{center}
+
+El cuadro de mando integral llena el vacío que existe en la mayoría de sistemas de gestión: la falta de un proceso sistemático para poner en práctica la estrategia y obtener feedback sobre ella. Los procesos de gestión alrededor del Cuadro de Mando permiten que la organización se equipare y se centre en la puesta en práctica de la estrategia a largo plazo. Utilizado de este modo, el Cuadro de Mando Integeral se convierte en los cimientos para gestionar las organizaciones de la era de la información.\\
+\\
+En la siguiente figura se presentan las cuatro perspectivas del Cuadro de Mando Integral, se puede apreciar que es un sistema que considera todos los procesos estratégicos de la organización:
+
+\begin{center}
+	\includegraphics[width=10cm]{./Imagenes/img2} 
+\end{center}
+
+Balanced Scorecard, ejemplo de mapa estratégico de una joyería
+
+\begin{center}
+	\includegraphics[width=13cm]{./Imagenes/img3} 
+\end{center}
 
 Areas críticas de Balanced Scorecard:
 		\begin{itemize}
