Agregando Business Model Canvas

--- a/BSC-BMC/index.tex
+++ b/BSC-BMC/index.tex
@@ -120,14 +120,112 @@ Ventajas de Balanced Scorecard:
 	
 	%% main text
 
-\section{Marco Teorico}
-	
-\subsection{subtitulo}	
+\pagebreak
 
-	aqui el marco teorico 
-		
-\subsection{subtitulo2}
-		
+\subsection{Beneficios del modelo canvas para tu negocio}
+\begin{itemize}	
+\item La principal ventaja del canvas model es la sencillez con la que se puede trabajar a la hora de definir un modelo de negocio.
+\item Uno de los principales beneficios del lienzo de canvas es que podemos ver de una forma muy visual los elementos más importantes del modelo de negocio de una organización.
+\item Nos permite también una mayor adaptación al cambio. La metodología canvas se basa en tratar de adaptar tu modelo de negocio a los cambios que se van produciendo en el entorno y en la propia empresa. Al ver los elementos más importantes de la organización de una forma integral, puede ser más sencillo determinar qué elementos están fallando en la consecución de los objetivos.
+\item Otra de las ventajas de adoptar la metodología canvas es que permite trabajar en equipo.
+\end{itemize}
+
+\subsection{Elementos que forman parte del Business Model Canvas}
+
+\subsubsection{Segmentos de Clientes}
+Los clientes deben de ser el centro de cualquier tipo de negocio, como se suele decir, son la razón de ser de una organización.
+Da igual la propuesta de valor que tenga tu empresa, que si no satisface las necesidades de ningún segmento de clientes, tu negocio estará destinado al fracaso.	
+	\begin{center}
+	\includegraphics[width=13cm]{./Imagenes/canvas1}
+	\end{center}
+Tener claro cómo definir tu público objetivo puede marcar el éxito o el fracaso de un proyecto.
+Los clientes no se tienen que adaptar a tu propuesta de valor, eres tú quien debes de adaptar la propuesta de valor de tu negocio a sus necesidades y deseos.
+Por lo que el primer paso será tener claro a qué segmento de clientes te quieres dirigir.\\
+Alguna de las preguntas que te puedes hacer y que te ayudarán a definir a tu cliente ideal pueden ser:\\
+\begin{itemize}
+\item ¿Por qué les pueden interesar mis productos?
+\item ¿Qué tipo de producto es más adecuado para cada segmento?
+\item ¿Qué diferencia mi propuesta de valor de la del resto de competidores?
+\item ¿Qué les podría impedir comprar mis productos?
+\item ¿Cuáles son sus deseos, sus metas y sus motivaciones?
+\item ¿Con qué canales tendríamos más fácil llegar a ellos?
+\end{itemize}
+
+\subsubsection{Propuesta de Valor}
+El segundo punto de tu modelo de negocio canvas será la propuesta de valor de tu negocio.
+La propuesta de valor de una empresa y el segmento de clientes son la base cualquier modelo de negocio
+La propuesta de valor hay que entenderla como el conjunto de beneficios que le vamos a aportar a nuestros clientes con nuestros productos y servicios.
+Es la razón por la que los clientes nos elegirán a nosotros como alternativa en lugar de a la competencia.
+Hay que diseñarla en función de las necesidades del cliente pero también fijar un precio que esté dispuesto a pagar y que sea rentable para nuestro negocio.\\
+Aquí es fundamental conocer:\\
+\begin{itemize}
+\item ¿Qué problema ayudamos a solucionar?
+\item ¿Qué valor diferencial ofrecemos a nuestros clientes?
+\end{itemize}
+Por ejemplo, en el libro de Generación de Modelos de Negocio, recoge que los principales elementos para ofrecer un valor diferencial son:\\
+\begin{enumerate}[1.]
+\item Precio
+\item Novedad
+\item Calidad
+\item Conveniencia
+\item Marca o Status
+\item Desempeño
+\item Reducción de riesgo
+\item Reducción de costes
+\item Diseño
+\item Customización
+\end{enumerate}
+A la hora de crear tu business canvas model lo que deberás de hacer es elegir aquellos factores que te van a permitir diferenciarte y buscar una posición competitiva ventajosa en tu nicho de mercado.
+
+\subsubsection{Canales}
+¿De qué sirve tener la mejor propuesta de valor y una demanda de mercado si no tenemos los canales adecuados?
+Es en este punto dónde vamos a decidir cómo vamos a comunicar nuestro valor diferencial.\\
+Según el propio Osterwalder, existen diferentes tipos de canales.\\
+\begin{itemize}
+\item Los canales directos e indirectos.
+\item Los canales propios y los canales de los socios.
+\end{itemize}
+
+Los canales directos hacen referencia a:
+\begin{itemize}
+\item La fuerza de ventas.
+\item Las ventas por internet.
+\end{itemize}
+
+Mientras que los canales indirectos incluyen:
+\begin{itemize}
+\item Tiendas propias
+\item Tiendas asociadas
+\item Los mayoristas
+\item Etc.
+\end{itemize}
+A la hora de seleccionar los canales también hay que entender la fase en la que se encuentran los clientes en nuestro embudos de ventas.\\
+Estas cinco fases son:
+\begin{enumerate}[1.]
+\item  Búsqueda de información.
+\item  Evaluación de alternativas.
+\item  Compra.
+\item  Entrega.
+\item  Servicio post – venta.
+\end{enumerate}
+Es lo que se conoce como el mapa de experiencias del cliente y hace referencia a cada una de las fases por las que pasa el cliente desde que reconoce su necesidad hasta que decide satisfacerla.\\
+	\begin{center}
+	\includegraphics[width=13cm]{./Imagenes/canvas2}
+	\end{center}
+Lo que haremos es seleccionar aquellos canales online que nos van a permitir dar a conocer nuestro producto a nuestra audiencia objetivo para que terminen realizando la compra.\\
+Por ejemplo, algunos de los canales que podremos utilizar serán:\\
+\begin{itemize}
+\item El posicionamiento SEO.
+\item Publicidad SEM.
+\item Redes Sociales.
+\item Social Ads.
+\item Estrategia de contenidos.
+\item Email marketing.
+\item Marketing de afiliación.
+\end{itemize}
+La clave estará en saber qué canal es mejor utilizar en cada una de las fases en las que se encuentre el cliente.
+
+
 	
 
 	%%
