Agregando Business Model Canvas

--- a/BSC-BMC/index.tex
+++ b/BSC-BMC/index.tex
@@ -119,7 +119,24 @@ Ventajas de Balanced Scorecard:
 	%\linenumbers
 	
 	%% main text
+\pagebreak
 
+\section{Business Model Canvas}
+	
+\subsection{¿Qué es el Business Model Canvas?}	
+Es una herramienta nueva, que hace unos años (2010) vio la luz gracias al libro  “Generación de modelos de negocio” (Business Model Generation) escrito por Alex Osterwalder e Yves Pigneur. Este libro se caracteriza por ser una guía para visionarios, revolucionarios y retadores que quieren desafiar los anticuados modelos de negocio y diseñar las empresas del futuro. \\
+Cuenta con nueve módulos que forman parte del método canvas, aunque se podrían dividir en 4 áreas diferentes los cuales son:\\
+\begin{enumerate}[1.]
+\item La oferta.
+\item Los clientes.
+\item La estructura.
+\item La viabilidad económica del proyecto.
+
+	\begin{center}
+	\includegraphics[width=13cm]{./Imagenes/canvas}
+	\end{center}
+
+\end{enumerate}
 \pagebreak
 
 \subsection{Beneficios del modelo canvas para tu negocio}
