--- a/BSC-BMC/index.tex
+++ b/BSC-BMC/index.tex
@@ -7,6 +7,7 @@
 \usepackage{lineno}
 \usepackage[utf8]{inputenc}
 \usepackage{url}
+\usepackage{color}
 
 
 
@@ -15,7 +16,7 @@
 	\begin{frontmatter}
 		
 		
-		\title{\huge Balanced ScoreCard y Business Model Canvas}
+		\title{\huge Balanced ScoreCard vs Business Model Canvas}
 		
 		\author{Mamani Ayala, Brandon        (2015052715)}
 		\author{Quispe Mamani, Angelo	      (2015052826)}
@@ -250,7 +251,17 @@ La clave estará en saber qué canal es mejor utilizar en cada una de las fases 
 	
 	%% main text
 
+\section{Diferencias}
+Balanced Scorecard y Business model canvas son t\'ecnicas de análisis empresarial . Ambas t\'ecnicas son \'utiles para mejorar el desempeño organizacional. Pero sus aplicaciones son diferentes. Ambos se pueden usar junto con los indicadores clave de rendimiento para monitorear y mejorar el rendimiento de la organización
+\begin{itemize}
+\item Cuando usar Balanced Score Card.
+   \\
+    \\Se utilizan para monitorear el desempeño de la organización a lo largo del tiempo. Si se observa una caída estadística en la puntuación, la organización debe iniciar un cambio para detener la disminución del rendimiento. 
+\item Cuando usar Business Model Canvas.
+\\
+      \\ Se puede usar como una herramienta de diagnóstico como una lente en el estado actual del negocio, especialmente en cantidades relativas de energía, tiempo y recursos que se invierten actualmente en diversas áreas. Si alguna de las áreas del modelo tiene un bajo rendimiento, la organización debe iniciar un cambio para mejorar el mismo.
 
+\end{itemize}
 %%
 	
 	%%
@@ -258,7 +269,9 @@ La clave estará en saber qué canal es mejor utilizar en cada una de las fases 
 	
 	%% main text
 \section{Conclusion}
-aqui la conclusion
+   La gestión del desempeño contiene actividades que pueden garantizar que los objetivos se logren de manera consistente y eficaz. A través de Business Model Canvas, se le ofrece un concepto con el que puede describir, reflexionar e investigar el modelo de negocio de su organización. Un modelo de negocio se puede describir mejor sobre la base de nueve bloques de construcción básicos, que muestran la lógica de cómo una empresa quiere ganar dinero.
+ El énfasis está en la implementación práctica del BSC y en la construcción de un tablero de instrumentos equilibrado, teniendo en cuenta no solo un tablero financiero, sino también la perspectiva del cliente, la perspectiva interna e innovadora. 
+          
 
 %%
 	
@@ -267,10 +280,7 @@ aqui la conclusion
 	
 	%% main text
 
-	
-	
-	\newpage
-	
+
 	\bibliographystyle{apalike} 	%ESTILO
 	\bibliography{BIBLIOGRAFIA}		%ARCHIVO .bib
 	
@@ -291,7 +301,10 @@ aqui la conclusion
 	
 	%% References with bibTeX database:
 	
-	
+	 \textcolor{blue}{\url{https://www.adaptiveus.com/balanced-scorecard-vs-business-model-canvas/}}
+	 \textcolor{blue}{\url{   https://www.marketingandweb.es/emprendedores-2/que-es-el-modelo-canvas/}}
+
+       
 	%% Authors are advised to submit their bibtex database files. They are
 	%% requested to list a bibtex style file in the manuscript if they do
 	%% not want to use model1-num-names.bst.
