Desarrollo de Modelo Canvas 4-9

--- a/BSC-BMC/index.tex
+++ b/BSC-BMC/index.tex
@@ -244,7 +244,121 @@ Por ejemplo, algunos de los canales que podremos utilizar serán:\\
 La clave estará en saber qué canal es mejor utilizar en cada una de las fases en las que se encuentre el cliente.
 
 
+\subsubsection{Relaciones con los Clientes}
+En la cuarta fase del método canvas deberás de establecer el tipo de relación que vas a tener con tus clientes.\\
+Es decir, deberás de concretar qué tipo de relación vas a tener:\\
+\begin{itemize}
+\item Personal.
+\item Automática
+\item De autoservicio.
+\item Pago único (Life time).
+\item Pago mediante suscripción (mensual, trimestral, anual).
+
+\end{itemize}
+
+La clave se basa en pensar cómo hacer para que el cliente se sienta identificado con nuestra propuesta de valor para que permanezca a nuestro lado y no se vaya con la competencia.\\
+
+Aquí está otro de los errores que cometen muchos emprendedores y que yo no quiero que cometas.\\
+
+Muchas empresas únicamente se centran únicamente en conseguir y conseguir nuevos clientes sin cuidar a los clientes actuales.\\
+
+Y no se dan cuenta de que cuesta más conseguir un nuevo cliente que retener a los clientes.\\
+
+Por lo que será fundamental que en este apartado del modelo canvas definas cómo vas a mantener la relación con los clientes actuales.\\
+
+\subsubsection{Fuentes de Ingresos}
+
+Es en este punto del business model canvas donde tienes que reflejar las diferentes fuentes de ingresos que vas a conseguir. \\
+
+Otro de los errores que cometen muchos emprendedores es empezar definiendo su modelo de negocio en base a las diferentes vías de ingresos que van a obtener.\\
+
+Esto es un error porque la forma correcta de definir los ingresos de tu canvas es habiendo definido previamente los segmentos de clientes a los que te vas a dirigir.\\
+
+Aquí deberás reflejar los ingresos en efectivo que vas a generar con cada segmento de clientes.\\
+
+Para calcular esto, será fundamental que en el segundo apartado del lienzo de canvas (propuesta de valor) hayas empezado a analizar cuánto dinero van a estar dispuestos a pagar tus clientes por tus productos.\\
+
+Además, deberás de definir cuáles van a ser las formas de pago que van a tener los clientes.\\
+
+Principalmente, existen dos tipos de ingresos básicos\\
+\begin{itemize}
+\item Los pagos únicos
+\item Los pagos periódicos
+\end{itemize}
+Y en función de estos dos tipos pueden darse varias formas de obtener ingresos:\\
+\begin{itemize}
+\item Alquiler. Por ejemplo, cuando alquilas un apartamento.
+\item Cuota de servicio o uso. Por ejemplo las compañías de teléfono.
+\item Cuota por suscripción. Sería el caso de Netflix o de un gimnasio.
+\item Concesiones de licencia.
+\item Comisiones de corretaje. Por ejemplo, las comisiones cobradas por un agente de bolsa.
+\end{itemize}
+\subsubsection{Recursos Clave}
+
+Recapitulemos, hemos definido en la plantilla del modelo canvas quiénes son nuestros clientes, qué les vamos a ofrecer, cómo se lo vamos a ofrecer, qué tipo de relaciones vamos a mantener con ellos y cómo vamos a conseguir generar ingresos.\\
+
+Ahora es cuando debemos de concretar los recursos claves que dispone la empresa para comunicar su propuesta de valor.\\
+
+ Existen cuatro tipo de recursos clave:\\
+\begin{itemize}
+\item Humanos. Aquí deberás de tener en cuenta a todas las personas que necesitarás tener a disposición en tu organización.
+\item Físicos. Deberás de concretar las instalaciones y maquinarias que tienes a disposición.
+\item Intelectuales. Aquí entrarían las patentes, software, etc.
+\item Económicos. Finalmente deberás incluir todos los recursos financieros de que dispones.
+\end{itemize}
+\subsubsection{Actividades Clave}
+
+En este apartado de la matriz del modelo de negocio deberemos de tener en cuenta todas las actividades y procesos que serán necesarios para crear y ofrecer la propuesta de valor.\\
+
+En su libro Osterwalder de Generación de Modelos de Negocio lo explica con un ejemplo muy sencillo “La actividad clave del fabricante de software Microsoft es el desarrollo de software.\\
+
+También indica que las actividades clave relacionadas con las empresas están formadas por la producción, la venta y el soporte.\\
+
+La actividad de producción va desde el diseño, la fabricación y el desarrollo de los productos y servicios de la empresa.\\
+
+La venta engloba todas aquellas actividades vinculadas con la comunicación, promoción de la propuesta de valor de la empresa para hacerla llegar a sus segmentos de clientes.\\
+
+Mientras que la parte de soporte incluye actividades como la contratación de personal o las tareas administrativas y contables.\\
+
+Este punto en concreto del modelo de negocio canvas me gusta tratarlo desde la Cadena de Valor de Porter\\
+
+Leyenda: Cadena de Valor de Porter\\
+
+\begin{center}
+	\includegraphics[width=13cm]{./Imagenes/ang1.png}
+\end{center}
+
+La cadena de valor de Porter sostiene que es un modelo que describe todas las actividades clave que lleva a cabo una empresa para generar valor (propuesta de valor) a su cliente final.\\
+
+Por lo tanto, lo que deberías de hacer aquí es diferenciar entre las actividades de soporte y las primarias y clasificarla en orden de importancia para tu modelo de negocio.\\
+
+\subsubsection{Asociaciones Clave}
+
+Este es otro de los puntos esenciales del método canvas, aquí deberás de definir quiénes van a ser tus proveedores y tus socios estratégicos.\\
+
+En este apartado me gustaría también citar al modelo de stakeholders que nombran en su libro Guerras y Navas\\
+
+Leyenda: Stakeholders Guerras y Navas\\
+
+\begin{center}
+	\includegraphics[width=13cm]{./Imagenes/ang2.png}
+\end{center}
 	
+Los stakeholders o grupos de interés están formados por grupos de personas que tienen unos objetivos que están relacionados directa o indirectamente con la propia actividad de la empresa.\\
+
+La clave aquí pasa por identificar los grupos más interesantes para la empresa y tratar de crear alianzas estratégicas con ellos.\\
+
+\subsubsection{Estructura de Costes}
+
+Finalmente, en el último módulo del business model canvas lo que deberemos de hacer es determinar la estructura de costes del canvas.\\
+
+Esta estructura de costes estará formada principalmente por las actividades clave, los recursos clave y las asociaciones clave.\\
+
+La estructura de costes de una empresa es fundamental para su viabilidad económica y es uno de los puntos más delicados del modelo de negocio canvas.\\
+
+Tómate el tiempo que necesites en esta fase, porque la correcta imputación de los costes también puede marcar el éxito o el fracaso de un proyecto.\\
+
+
 
 	%%
 	%\linenumbers
